--- a/web/styles.css
+++ b/web/styles.css
@@ -6,12 +6,41 @@ body {
 }
 
 header {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
   color: #4caf50;
   padding: 10px 0;
   text-align: center;
-  font-size: 30px;
-  margin-bottom: 20px;
+  font-size: 20px;
   font-weight: bold;
+}
+
+.logo {
+  width: 200px;
+
+  height: auto;
+}
+
+footer {
+  text-align: center;
+  padding: 20px 0;
+  margin-top: 20px;
+  background: linear-gradient(
+      -45deg,
+      transparent 33.33%,
+      rgba(179, 140, 57, 0.1) 33.33%,
+      rgba(68, 47, 2, 0.1) 66.66%,
+      transparent 66.66%
+    ),
+    #27384b;
+  background-size: 15px 15px;
+  border-radius: 10px;
+  color: #fff;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 h1,
